gcc/testsuite/rust/rustc/ui/resolve/issue-103202_dg.rs
struct S {}

impl S {
    fn f(self: &S::x) {} // { dg-error ".E0223." "" { target *-*-* } }
}

fn main() {}

